# ChangeLog for app-misc/ranger
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/ranger/ChangeLog,v 1.16 2012/05/31 13:04:48 radhermit Exp $

  31 May 2012; Tim Harder <radhermit@gentoo.org> ranger-1.5.4.ebuild:
  Use virtual/pager instead of sys-apps/less since any pager should work and
  the virtual defaults to less.

  31 May 2012; Tim Harder <radhermit@gentoo.org> -ranger-1.5.3.ebuild:
  Remove old.

  03 May 2012; Tim Harder <radhermit@gentoo.org> -ranger-1.5.2.ebuild:
  Remove old.

*ranger-1.5.4 (03 May 2012)

  03 May 2012; Tim Harder <radhermit@gentoo.org> +ranger-1.5.4.ebuild:
  Version bump.

*ranger-1.5.3 (06 Mar 2012)

  06 Mar 2012; Tim Harder <radhermit@gentoo.org> +ranger-1.5.3.ebuild:
  Version bump.

  18 Feb 2012; Tim Harder <radhermit@gentoo.org> -ranger-1.5.0.ebuild:
  Remove old.

*ranger-1.5.2 (26 Oct 2011)

  26 Oct 2011; Tim Harder <radhermit@gentoo.org> +ranger-1.5.2.ebuild:
  Version bump.

  15 Oct 2011; Tim Harder <radhermit@gentoo.org> -ranger-1.4.3.ebuild,
  -files/ranger-1.4.3-fix-tests.patch, -ranger-1.4.4.ebuild,
  -files/ranger-1.4.4-fix-tests.patch:
  Remove old.

*ranger-1.5.0 (14 Oct 2011)

  14 Oct 2011; Tim Harder <radhermit@gentoo.org> +ranger-1.5.0.ebuild:
  Version bump.

*ranger-1.4.4 (04 Oct 2011)

  04 Oct 2011; Tim Harder <radhermit@gentoo.org> +ranger-1.4.4.ebuild,
  +files/ranger-1.4.4-fix-tests.patch:
  Version bump.

  18 Jul 2011; Tim Harder <radhermit@gentoo.org> ranger-1.4.3.ebuild,
  +files/ranger-1.4.3-fix-tests.patch:
  Fix tests (bug #358887).

  27 Apr 2011; Tim Harder <radhermit@gentoo.org> -ranger-1.4.2.ebuild,
  ranger-1.4.3.ebuild:
  Remove old and restrict tests as a temporary workaround for bug #358887.

*ranger-1.4.3 (08 Apr 2011)

  08 Apr 2011; Tim Harder <radhermit@gentoo.org> -ranger-1.4.1.ebuild,
  +ranger-1.4.3.ebuild:
  Version bump and remove old.

*ranger-1.4.2 (14 Mar 2011)
