@@ -1,0 +1,31 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/ranger/ranger-9999.ebuild,v 1.1 2012/06/24 03:42:02 radhermit Exp $
+
+EAPI="4"
+PYTHON_DEPEND="2:2.6 3:3.1"
+PYTHON_USE_WITH="ncurses"
+SUPPORT_PYTHON_ABIS="1"
+RESTRICT_PYTHON_ABIS="2.[45]"
+
+inherit distutils git-2
+
+EGIT_REPO_URI="git://git.savannah.nongnu.org/ranger.git"
+
+DESCRIPTION="A vim-inspired file manager for the console"
+HOMEPAGE="http://ranger.nongnu.org/"
+SRC_URI=""
+
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS=""
+IUSE=""
+
+RDEPEND="virtual/pager"
+
+pkg_postinst() {
+	distutils_pkg_postinst
+
+	elog "Ranger has many optional dependencies to support enhanced file previews."
+	elog "See the README or homepage for more details."
+}
